Closed
Bug 976739
Opened 11 years ago
Closed 11 years ago
<input type="number">: required attribute breaks up/down arrows
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
mozilla30
People
(Reporter: markus.popp, Assigned: jwatt)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
3.21 KB,
patch
|
smaug
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Adding required attribute to <input type="number"> breaks the up and down arrows.
A demo is available at http://var.mpopp.net/number-bug/
Number 1 is with required attribute, up and down arrows don't work.
Number 2's up and down arrows without required attribute work.
Comment 1•11 years ago
|
||
Both work for me in a current nightly.
Markus, which build are you testing?
Flags: needinfo?(markus.popp)
| Reporter | ||
Comment 2•11 years ago
|
||
(In reply to Boris Zbarsky [:bz] (reviews will be slow; ask someone else) from comment #1)
> Markus, which build are you testing?
Today's (2014-02-25) Nightly, on Linux64. Aurora is the same.
Flags: needinfo?(markus.popp)
Comment 3•11 years ago
|
||
Huh. I can reproduce; looks like my nightly was not in fact current and this recently regressed!
Keywords: regression
Comment 4•11 years ago
|
||
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=6e3ec93efe1d&tochange=bf0e76f2a7d4
Presumably a regression from bug 967429? Or is this the new desired behavior?
Blocks: 967429
Flags: needinfo?(jwatt)
| Assignee | ||
Comment 5•11 years ago
|
||
(In reply to Boris Zbarsky [:bz] (reviews will be slow; ask someone else) from comment #4)
> Presumably a regression from bug 967429?
Yes.
> Or is this the new desired behavior?
No, I just failed to consider this case.
Flags: needinfo?(jwatt)
| Assignee | ||
Comment 6•11 years ago
|
||
Assignee: nobody → jwatt
Attachment #8382581 -
Flags: review?(bugs)
| Assignee | ||
Updated•11 years ago
|
OS: Linux → All
Hardware: x86_64 → All
| Assignee | ||
Comment 7•11 years ago
|
||
Comment 8•11 years ago
|
||
Comment on attachment 8382581 [details] [diff] [review]
patch
Could you perhaps add few more synthesized key events to the test, and check the value after them, just to catch possible other regressions.
Use both up and down events.
Attachment #8382581 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 9•11 years ago
|
||
Comment 10•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
| Assignee | ||
Comment 11•11 years ago
|
||
Comment on attachment 8382581 [details] [diff] [review]
patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 967429
User impact if declined: authors can make content that unintentionally blocks up/down keys
Testing completed (on m-c, etc.): been on m-c for a few days
Risk to taking this patch (and alternatives if risky): very low
String or IDL/UUID changes made by this patch: none
Attachment #8382581 -
Flags: approval-mozilla-aurora?
Updated•11 years ago
|
status-firefox29:
--- → affected
status-firefox30:
--- → fixed
Updated•11 years ago
|
Attachment #8382581 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 12•11 years ago
|
||
Updated•11 years ago
|
QA Contact: petruta.rasa
Comment 13•11 years ago
|
||
Verified as fixed using latest Aurora 29.0a2 (20140306004001) and latest Nightly 30.0a1 (20140306030201) under Win 7 64-bit, Mac OSX 10.9 and Ubuntu 32-bit.
You need to log in
before you can comment on or make changes to this bug.
Description
•