Bug 976739 - Allow user initiated stepping of <input type=number> when its value is the empty string (even if it is invalid due to the 'required' attribute being present) and step correctly if the value 0 (the default for the empty string) is not on a step. r=smaug